--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "homepage": "https://github.com/77Vincent/77vincent-server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-fetch": "^2.2.3",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "express": "^4.16.4",
     "ghooks": "^2.0.4",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "pm2": "^3.2.2"
   },
   "config": {
     "ghooks": {
