--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.3.2",
     "ghooks": "^2.0.4",
     "nodemon": "^1.18.6",
     "pm2": "^3.2.2"
