--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/77Vincent/77vincent-server#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "cors": "^2.8.5",
     "cross-fetch": "^2.2.3",
     "eslint": "^5.9.0",
@@ -29,11 +30,8 @@
     "express-rate-limit": "^3.3.2",
     "ghooks": "^2.0.4",
     "nodemon": "^1.18.6",
-    "pm2": "^3.2.2"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run lint"
-    }
+    "pm2": "^3.2.2",
+    "prismjs": "^1.15.0",
+    "pug": "^2.0.3"
   }
 }
