--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.4",
     "express-rate-limit": "^3.3.2",
     "ghooks": "^2.0.4",
+    "jstransformer-markdown-it": "^2.1.0",
     "nodemon": "^1.18.6",
     "pm2": "^3.2.2",
     "prismjs": "^1.15.0",
