--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "express-rate-limit": "^3.3.2",
     "ghooks": "^2.0.4",
     "jstransformer-markdown-it": "^2.1.0",
+    "markdown": "^0.5.0",
     "moment": "^2.22.2",
     "nodemon": "^1.18.6",
     "pm2": "^3.2.2",
     "prismjs": "^1.15.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "showdown": "^1.9.0"
   }
 }
