--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pm2": "^3.2.2",
     "prismjs": "^1.15.0",
     "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0",
     "showdown": "^1.9.0"
   }
 }
