--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "sync": "node scripts/index.js",
-    "server": "PORT=80 pm2 start index.js --watch",
+    "server": "pm2 start ecosystem.config.js --env production",
     "lint": "eslint ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
