--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "express-rate-limit": "^3.3.2",
     "ghooks": "^2.0.4",
+    "jquery": "^3.4.1",
     "moment": "^2.22.2",
     "nodemon": "^1.18.6",
     "pm2": "^3.2.2",
